--- a/style.css
+++ b/style.css
@@ -7,25 +7,43 @@ body {
     "nav footer";
     /*border: 1px solid black;*/
     align-items: stretch;
-    gap: 10px;
+    gap: 0px 10px;
+    /*background-color: lightcyan;*/
+    background-color: rgb(255, 250, 205);
 }
 
 #top {
     grid-area: top;
+    background-color: aliceblue;
     /*border: 1px solid black;*/
 }
 
 nav {
     grid-area: nav;
+    background-color: blanchedalmond;
     /*border: 1px solid black;*/
 }
 
 footer {
     grid-area: footer;
     /*border: 1px solid black;*/
+    background-color: beige;
 }
 
 main {
     grid-area: main;
     /*border: 1px solid black;*/
+    background-color:  wheat;
+}
+
+h1 {
+    background-color: lightgreen;
+}
+
+h2 {
+    background-color: hsl(251, 29%, 72%);
+}
+
+details {
+    background-color: #F0FFFF;
 }
