--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     display: grid;
     grid-template-columns: max-content auto;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto;
     grid-template-areas:
     "top main"
-    "nav footer";
+    "nav main"
+    "footer main";
     /*border: 1px solid black;*/
     align-items: stretch;
     gap: 0px 10px;
@@ -13,27 +14,63 @@ body {
 }
 
 #top {
+    /*  Grid location   */
     grid-area: top;
+    /*  background  */
     background-color: aliceblue;
-    /*border: 1px solid black;*/
+    /*  border  */
+    border-style: dashed;
+    border-color: burlywood;
+    border-width: 2px;
+    border-radius: 10px;
+    /*  margin  */
+    margin: auto;
+    /*  padding */
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    padding-left: 1vw;
+    padding-right: 1vw;
 }
 
 nav {
     grid-area: nav;
     background-color: blanchedalmond;
-    /*border: 1px solid black;*/
+    border: 1px solid black;
+    /*  border  */
+    border-style: double;
+    border-color: burlywood;
+    border-width: 2px;
+    border-radius: 10px;
+    /*  margin  */
+    margin: 3vh 1vw 1vh 1vw;
+    /*  padding */
+    padding: 1vh 1vw 1vh 1vw;
 }
 
 footer {
     grid-area: footer;
-    /*border: 1px solid black;*/
     background-color: beige;
+    /*  border  */
+    border-style: double;
+    border-color: burlywood;
+    border-width: 2px;
+    border-radius: 10px;
+    /*  margin  */
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    /*  padding */
+    padding: 1vh 1vw 1vh 1vw;
 }
 
 main {
     grid-area: main;
-    /*border: 1px solid black;*/
     background-color:  wheat;
+    border-style: outset;
+    border-color: burlywood;
+    border-width: 10px;
+    padding: 1vh 1vw 1vh 1vw;
 }
 
 h1 {
@@ -46,4 +83,11 @@ h2 {
 
 details {
     background-color: #F0FFFF;
+}
+
+#navigation_list {
+    border-style: solid;
+    border-color: lightskyblue;
+    border-width: 2px;
+    padding: 1vh 1vw 1vh 4vw;
 }
