--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body {
     display: grid;
-    grid-template-columns: max-content auto;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-    "top main"
-    "nav main"
-    "footer main";
+    grid-template-columns: minmax(auto, max-content) auto;
+    grid-template-rows: auto auto min-content auto;
+    /*grid-template-areas:
+    "head main"
+    "footer main";*/
     /*border: 1px solid black;*/
     align-items: stretch;
     gap: 0px 10px;
@@ -15,7 +14,11 @@ body {
 
 #top {
     /*  Grid location   */
-    grid-area: top;
+    /*grid-area: head;*/
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 1;
     /*  background  */
     background-color: aliceblue;
     /*  border  */
@@ -33,7 +36,11 @@ body {
 }
 
 nav {
-    grid-area: nav;
+    /*grid-area: head;*/
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 1;
     background-color: blanchedalmond;
     border: 1px solid black;
     /*  border  */
@@ -48,7 +55,11 @@ nav {
 }
 
 footer {
-    grid-area: footer;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    /*grid-area: footer;*/
     background-color: beige;
     /*  border  */
     border-style: double;
@@ -65,7 +76,11 @@ footer {
 }
 
 main {
-    grid-area: main;
+    /*grid-area: main;*/
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 4;
     background-color:  wheat;
     border-style: outset;
     border-color: burlywood;
@@ -75,14 +90,24 @@ main {
 
 h1 {
     background-color: lightgreen;
+    text-align: center;
 }
 
 h2 {
     background-color: hsl(251, 29%, 72%);
+    text-align: center;
+    color: rgb(79, 48, 8);
+}
+#nav_title {
+    text-decoration: underline;
 }
 
 details {
     background-color: #F0FFFF;
+}
+
+summary {
+    color: darkgreen;
 }
 
 #navigation_list {
@@ -90,4 +115,31 @@ details {
     border-color: lightskyblue;
     border-width: 2px;
     padding: 1vh 1vw 1vh 4vw;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    color: green;
+}
+a:active {
+    color: red;
+}
+
+strong {
+    color: darkred;
+}
+
+em {
+    color: forestgreen;
+}
+
+p {
+    padding: 0.5vh 0.5vw 0.5vh 0.5vw;
+}
+
+legend {
+    text-decoration: underline;
 }
