--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ body {
     padding-bottom: 1vh;
     padding-left: 1vw;
     padding-right: 1vw;
+    font-family: "Sedgwick Ave Display";
+
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
 }
 
 nav {
@@ -52,6 +58,9 @@ nav {
     margin: 3vh 1vw 1vh 1vw;
     /*  padding */
     padding: 1vh 1vw 1vh 1vw;
+
+    font-family: "Bebas Neue";
+    font-size: 20px;
 }
 
 footer {
@@ -87,6 +96,10 @@ main {
     border-width: 10px;
     padding: 1vh 1vw 1vh 1vw;
     position: relative;
+}
+
+main h2 {
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 h1 {
