Added media query to resize for smaller displays and more CSS

--- a/style.css
+++ b/style.css
@@ -172,3 +172,10 @@ legend {
     max-width: 500px;
     height: 80px;
 }
+
+@media (max-width: 50em) {
+    body {
+        display: flex;
+        flex-direction: column;
+    }
+}
