--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
+/*  Remove text decoration by default   */
+* {
+    text-decoration: none;
+}
+
 body {
+    /*  Grid container  */
     display: grid;
     grid-template-columns: minmax(auto, max-content) auto;
     grid-template-rows: auto auto min-content auto;
-    /*grid-template-areas:
-    "head main"
-    "footer main";*/
-    /*border: 1px solid black;*/
     align-items: stretch;
     gap: 0px 10px;
-    /*background-color: lightcyan;*/
+    /*  background color    */
     background-color: rgb(255, 250, 205);
 }
 
 #top {
     /*  Grid location   */
-    /*grid-area: head;*/
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 1;
@@ -25,7 +26,7 @@ body {
     border-style: dashed;
     border-color: burlywood;
     border-width: 2px;
-    border-radius: 10px;
+    border-radius: 8pt;
     /*  margin  */
     margin: auto;
     /*  padding */
@@ -33,8 +34,9 @@ body {
     padding-bottom: 1vh;
     padding-left: 1vw;
     padding-right: 1vw;
+    /*  text    */
     font-family: "Sedgwick Ave Display";
-
+    /*  Flex container  */
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -42,13 +44,13 @@ body {
 }
 
 nav {
-    /*grid-area: head;*/
+    /*  Grid location   */
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 1;
     grid-row-end: 1;
+    /*  background  */
     background-color: blanchedalmond;
-    border: 1px solid black;
     /*  border  */
     border-style: double;
     border-color: burlywood;
@@ -58,23 +60,24 @@ nav {
     margin: 3vh 1vw 1vh 1vw;
     /*  padding */
     padding: 1vh 1vw 1vh 1vw;
-
+    /*  text    */
     font-family: "Bebas Neue";
     font-size: 20px;
 }
 
 footer {
+    /*  Grid location   */
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 2;
     grid-row-end: 3;
-    /*grid-area: footer;*/
+    /*  background  */
     background-color: beige;
     /*  border  */
     border-style: double;
     border-color: burlywood;
     border-width: 2px;
-    border-radius: 10px;
+    border-radius: 5mm;
     /*  margin  */
     margin-top: 1vh;
     margin-bottom: 1vh;
@@ -85,39 +88,70 @@ footer {
 }
 
 main {
-    /*grid-area: main;*/
+    /*  Grid location   */
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 4;
+    /*  background  */
     background-color:  wheat;
-    border-style: outset;
-    border-color: burlywood;
-    border-width: 10px;
+    /*  border  */
+    border: 10px outset burlywood;
+    /*  padding */
     padding: 1vh 1vw 1vh 1vw;
+    /*  position    */
     position: relative;
 }
 
 main h2 {
+    /*  Set h2 tags in main to have this font family    */
     font-family:Arial, Helvetica, sans-serif;
 }
 
+main > section {
+    /*  Set section tags that are children of main to have this background  */
+    background-color: lightyellow;
+}
+
 h1 {
+    /*  background  */
     background-color: lightgreen;
+    /*  text    */
     text-align: center;
 }
 
 h2 {
+    /*  background  */
     background-color: hsl(251, 29%, 72%);
+    /*  text    */
     text-align: center;
     color: rgb(79, 48, 8);
 }
+
+h2 + span {
+    /*  Set span elements right after an h2 tag to this color   */
+    color:rgb(79, 48, 8);
+}
+
+label ~ label {
+    /*  Set every label after another label to have this color  */
+    color: darkslategray;
+}
+
+h3, h4, h5, h6 {
+    /*  Set headings h3 through h6 to be in italics */
+    font-style: italic;
+}
+
 #nav_title {
+    /*  text    */
     text-decoration: underline;
 }
 
 details {
+    /*  background  */
     background-color: #F0FFFF;
+    /*  display */
     display: block;
 }
 
@@ -126,16 +160,20 @@ summary {
 }
 
 #navigation_list {
+    /*  border  */
     border-style: solid;
     border-color: lightskyblue;
     border-width: 2px;
+    /*  padding */
     padding: 1vh 1vw 1vh 4vw;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    /*  flex container  */
+    flex-flow: column wrap;
     justify-content: space-evenly;
     align-items: start;
+    /*  lists    */
     list-style-type: none;
+    /*  position    */
     position: sticky;
 }
 
@@ -164,16 +202,25 @@ p {
 
 legend {
     text-decoration: underline;
+    display: inline;
 }
 
-#logo {
+.logo {
+    /*  size    */
     width: 250px;
     min-width: 100px;
     max-width: 500px;
     height: 80px;
 }
 
+p.byte {
+    /*  Set paragraphs that have the byte class to this color   */
+    color: green;
+}
+
 @media (max-width: 50em) {
+    /*  For a smaller screen, set the body to display as flex so that the elements are one
+        after each other    */
     body {
         display: flex;
         flex-direction: column;
